@@ -16,7 +16,8 @@
         <version>3.8.1</version>
         <configuration>
           <release>${java.version}</release>
-          <compilerArgs>--enable-preview</compilerArgs>
+          <source>14</source>
+          <target>14</target>
         </configuration>
       </plugin>
       <plugin>
@@ -84,7 +85,7 @@
     <artifactId>spring-boot-starter-parent</artifactId>
     <groupId>org.springframework.boot</groupId>
     <relativePath/>
-    <version>2.2.2.RELEASE</version> <!-- lookup parent from repository -->
+    <version>2.3.0.RELEASE</version> <!-- lookup parent from repository -->
   </parent>
 
   <properties>
